--- a/contact.html
+++ b/contact.html
@@ -226,7 +226,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>Feel free to reach out to me at: <br></p>
 <p><a href="mailto:simonpatrickcouch@gmail.com" class="email">simonpatrickcouch@gmail.com</a> <br></p>
-<p>Or connect with me on GitHub or Linkedin!</p>
+<p>Or connect with me on GitHub or Linkedin (links in top right)!</p>
 
 
 
