--- a/cv.html
+++ b/cv.html
@@ -224,16 +224,16 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<div id="education" class="section level3">
-<h3>EDUCATION</h3>
+<div id="education" class="section level2">
+<h2>Education</h2>
 <p><strong>Reed College</strong><br />
 <em>Portland, Oregon</em> | <em>Expected Graduation May 2021</em><br />
 • B.A. in Mathematics with a Concentration in Statistics<br />
 • Relevant Coursework: Statistics Practicum, Statistical Learning, Case Studies in Data Science, Probability and Statistics, Computer Science, Vector Calculus, Linear Algebra</p>
-
+<p><br></p>
 </div>
-<div id="technical-experience" class="section level3">
-<h3>TECHNICAL EXPERIENCE</h3>
+<div id="technical-experience" class="section level2">
+<h2>Technical Experience</h2>
 <p><strong>Educational Technology Consultant</strong> | <em>Reed College Technology Services</em><br />
 <em>Portland, Oregon</em> | <em>December 2018 – Present</em><br />
 • Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals<br />
@@ -253,23 +253,23 @@ $(document).ready(function () {
 • Analyzed, interpreted, and modeled financial and pharmacogenetic data<br />
 • Conducted company-wide presentations to communicate notable findings<br />
 • Advised future data collection strategies</p>
-
+<p><br></p>
 </div>
-<div id="publications" class="section level3">
-<h3>PUBLICATIONS</h3>
+<div id="publications" class="section level2">
+<h2>Publications</h2>
 <p><strong>Differentially Private Nonparametric Hypothesis Testing </strong>| <em>Computer and Communications Security</em><br />
 <em>London, United Kingdom</em> | <em>2019 (Submitted)</em><br />
 <strong>A Differentially Private Wilcoxon Signed-Rank Test</strong> | <em>arXiv</em><br />
 <em>Online</em> | <em>2018</em></p>
-
+<p><br></p>
 </div>
-<div id="skills" class="section level3">
-<h3>SKILLS</h3>
+<div id="skills" class="section level2">
+<h2>Skills</h2>
 <p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Basic)</em></p>
-
+<p><br></p>
 </div>
-<div id="additional-experience" class="section level3">
-<h3>ADDITIONAL EXPERIENCE</h3>
+<div id="additional-experience" class="section level2">
+<h2>Additional Experience</h2>
 <p><strong>House Adviser</strong> | <em>Reed College Residence Life </em><br />
 <em>Portland, Oregon</em> | <em>August 2018 – Present</em><br />
 • Build inclusive and active community for twelve residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring<br />
@@ -279,10 +279,10 @@ $(document).ready(function () {
 <em>Portland, Oregon</em> | <em>August 2018 – Present</em><br />
 • Advise students one-on-one on various professional development pursuits<br />
 • Coordinate in-residence workshops and information sessions</p>
-
+<p><br></p>
 </div>
-<div id="honors-awards" class="section level3">
-<h3>HONORS &amp; AWARDS</h3>
+<div id="honors-awards" class="section level2">
+<h2>Honors &amp; Awards</h2>
 <p><strong>1st Place—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
 <em>International</em> | <em>March 2019</em><br />
 A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test”</p>
@@ -295,10 +295,10 @@ Awarded to the top 5 percent of each class, based on school year GPA, annually</
 <p><strong>All-State Academic Scholar</strong> | <em>Lawrence Journal-World</em><br />
 <em>De Soto, Kansas</em> | <em>June 2017</em><br />
 An honor “meant to recognize the most promising high school senior [in Kansas]… based on their strong academics, extracurricular involvement, and essays”</p>
-
+<p><br></p>
 </div>
-<div id="presentations" class="section level3">
-<h3>PRESENTATIONS</h3>
+<div id="presentations" class="section level2">
+<h2>Presentations</h2>
 <p><strong>Private Hypothesis Testing Using Rank-Based Methods</strong> | <em>Theory and Practice of Differential Privacy</em><br />
 <em>Toronto, Canada</em> | <em>October 2018</em><br />
 <strong>A Differentially Private Wilcoxon Signed-Rank Test</strong> | <em>Reed College Mathematics Colloquium</em><br />
