--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>index.utf8.md</title>
+<title>Simon P. Couch - Home</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -219,6 +219,7 @@ $(document).ready(function () {
 
 
 
+<h1 class="title toc-ignore">Simon P. Couch - Home</h1>
 
 </div>
 
