add practicum project

--- a/cv.html
+++ b/cv.html
@@ -341,9 +341,8 @@ $(document).ready(function () {
 <em>Portland, Oregon</em> | <em>December 2018 – Present</em><br />
 • Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals<br />
 • Implement expressive and reproducible R and Python programs to address analytical challenges</p>
-<p><strong>Researcher</strong> | <em>Reed College Mathematics Department</em><br />
+<p><strong>Researcher</strong> | <em>Differentially Private Hypothesis Testing Group</em><br />
 <em>Portland, Oregon</em> | <em>April 2018 – Present</em><br />
-• Develop algorithms for differentially private non-parametric hypothesis testing<br />
 • Write, optimize, test, and maintain large bodies of R code<br />
 • Compose publication-quality manuscripts presenting findings thoughtfully and concisely<br />
 • Collaborate on R and LaTeX code using Git and GitHub version control</p>
@@ -379,9 +378,9 @@ $(document).ready(function () {
 • Coordinate and document 4 thoughtful dorm floor events per semester<br />
 • Document room inventories, event outcomes, advising sessions, and other administrative tasks</p>
 <p><strong>Peer Career Adviser</strong> | <em>Reed College Center for Life Beyond Reed</em><br />
-<em>Portland, Oregon</em> | <em>August 2018 – Present</em><br />
-• Advise students one-on-one on various professional development pursuits<br />
-• Coordinate in-residence workshops and information sessions</p>
+<em>Portland, Oregon</em> | <em>August 2018 – May 2019</em><br />
+• Advised students one-on-one on various professional development pursuits<br />
+• Coordinated in-residence workshops and information sessions</p>
 <p><br></p>
 </div>
 <div id="honors-awards" class="section level2">
@@ -402,7 +401,9 @@ An honor “meant to recognize the most promising high school senior [in Kansas]
 </div>
 <div id="presentations" class="section level2">
 <h2>Presentations</h2>
-<p><strong>Private Hypothesis Testing Using Rank-Based Methods</strong> | <em>Theory and Practice of Differential Privacy</em><br />
+<p><strong>An Alternative to Rank-Based College Exploration</strong> | <em>Statistics Practicum Colloquium</em><br />
+<em>Portland, Oregon</em> | <em>May 2019</em><br />
+<strong>Private Hypothesis Testing Using Rank-Based Methods</strong> | <em>Theory and Practice of Differential Privacy</em><br />
 <em>Toronto, Canada</em> | <em>October 2018</em><br />
 <strong>A Differentially Private Wilcoxon Signed-Rank Test</strong> | <em>Reed College Mathematics Colloquium</em><br />
 <em>Portland, Oregon</em> | <em>September 2018</em><br />
