--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,8 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
-<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
-<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
-<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
+<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
+<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -73,9 +72,7 @@ h6 {
 
 <link rel="stylesheet" href="styles.css" type="text/css" />
 
-</head>
 
-<body>
 
 <style type = "text/css">
 .main-container {
@@ -100,6 +97,9 @@ img {
 button.code-folding-btn:focus {
   outline: none;
 }
+summary {
+  display: list-item;
+}
 </style>
 
 
@@ -114,7 +114,6 @@ body {
   padding-top: 69px;
   margin-top: -69px;
 }
-
 .section h2 {
   padding-top: 69px;
   margin-top: -69px;
@@ -134,6 +133,43 @@ body {
 .section h6 {
   padding-top: 69px;
   margin-top: -69px;
+}
+.dropdown-submenu {
+  position: relative;
+}
+.dropdown-submenu>.dropdown-menu {
+  top: 0;
+  left: 100%;
+  margin-top: -6px;
+  margin-left: -1px;
+  border-radius: 0 6px 6px 6px;
+}
+.dropdown-submenu:hover>.dropdown-menu {
+  display: block;
+}
+.dropdown-submenu>a:after {
+  display: block;
+  content: " ";
+  float: right;
+  width: 0;
+  height: 0;
+  border-color: transparent;
+  border-style: solid;
+  border-width: 5px 0 5px 5px;
+  border-left-color: #cccccc;
+  margin-top: 5px;
+  margin-right: -10px;
+}
+.dropdown-submenu:hover>a:after {
+  border-left-color: #ffffff;
+}
+.dropdown-submenu.pull-left {
+  float: none;
+}
+.dropdown-submenu.pull-left>.dropdown-menu {
+  left: -100%;
+  margin-left: 10px;
+  border-radius: 6px 0 6px 6px;
 }
 </style>
 
@@ -155,19 +191,85 @@ $(document).ready(function () {
 });
 </script>
 
-
-<div class="container-fluid main-container">
-
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "&#xe258;";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
+});
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
 });
 </script>
 
 <!-- code folding -->
 
 
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid main-container">
 
 
 
@@ -236,7 +338,7 @@ $(document).ready(function () {
 <div id="equity-of-bikeshare-programs" class="section level3">
 <h3>Equity of Bikeshare Programs</h3>
 <p><em>October 2018 – Present</em></p>
-<p><img src="images/bikeshare.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> Beginning as a final class project for Statistical Learning (MATH 243) at Reed College in Fall 2018, this research project focuses on making use of machine learning methods to quantify progress in equity of bikeshare programs in the United States. Making use of <a href="https://github.com/ds-civic-data/gbfs">my R package gbfs</a> to scrape latitude/longitudes of over 6000 bikeshare stations across the country and joining that data with census demographic data, the project hopes to determine the features of a community that are most salient in predicting the location of these bikeshare station docks. A preliminary report on this research was awarded an <a href="https://www.causeweb.org/usproc/usclap/2018/fall/winners">honorable mention</a> in the ASA-sponsored “Undergraduate Statistics Class Project Competition.” Source code for this project can be found <a href="https://github.com/simonpcouch/bikeshare">here</a>.</p>
+<p><img src="images/bikeshare.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> Beginning as a final class project for Statistical Learning (MATH 243) at Reed College in Fall 2018, this research project focuses on making use of machine learning methods to quantify progress in equity of bikeshare programs in the United States. Making use of <a href="https://github.com/ds-civic-data/gbfs">my R package gbfs</a> to scrape latitude/longitudes of over 6000 bikeshare stations across the country and joining that data with census demographic data, the project hopes to determine the features of a community that are most salient in predicting the location of these bikeshare station docks. A preliminary report on this research was awarded an <a href="https://www.causeweb.org/usproc/usclap/2018/fall/winners">honorable mention</a> in the ASA-sponsored “Undergraduate Statistics Class Project Competition.”</p>
 <p><br></p>
 </div>
 <div id="gbfs-r-package" class="section level3">
@@ -245,6 +347,12 @@ $(document).ready(function () {
 <p><img src="images/gbfs.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> My collaborator Kaelyn Rosenberg and I initially built this tool as a class project in Case Studies in Data Science (MATH 241) at Reed College in Spring 2018. The <a href="https://cran.r-project.org/web/packages/gbfs/gbfs.pdf">CRAN-published</a> R Package makes use of a standardized data format used by hundreds of bikeshare programs nationwide for releasing live information feeds on bikeshare dock station and bike information (e.g. the location of docks, current location of bikes on the road, number of available docks at a given dock, etc.) to provide a set of functions to easily query these .json feeds and convert them to rectangular R data. Source code for that project can be found <a href="https://github.com/ds-civic-data/gbfs">here</a>!</p>
 <p><br></p>
 <p><br></p>
+<p><br></p>
+</div>
+<div id="an-alternative-to-rank-based-college-exploration" class="section level3">
+<h3>An Alternative to Rank-Based College Exploration</h3>
+<p><em>January 2019 – May 2019</em></p>
+<p><img src="images/network_viz.png" style="width:35%; border:1px solid; margin-right: 20px" align="left"> This was a project completed for Statistics Practicum (MATH 343) at Reed College in Spring 2019 with <a href="https://github.com/ejarce">EJ Arce</a> and <a href="https://github.com/moorea1">Alexander Moore</a>. In this work, we argued that newsmagazine college rankings like those provided by U.S. News are both unhelpful for prospective students and reinforce existing status obsession. As an alternative, we developed a data-centered tool that focuses on what makes a college similar to, not better than, another college. Data from IPEDS and the Mobility Report Card from the Equality of Opportunity Project were joined and provided to users in an R Shiny application that allows users to compare United States educational institutions through visualization, comparison of raw data, and model-based assessment of school similarity. That application is hosted live <a href="https://shiny.reed.edu/s/users/couchs/colleges/">here</a>, with source code and a copy of our final paper <a href="https://github.com/simonpcouch/College-Exploration">here</a>.</p>
 <p><br></p>
 </div>
 <div id="anyflights-r-package-no-longer-supported" class="section level3">
