--- a/cv.html
+++ b/cv.html
@@ -331,12 +331,17 @@ $(document).ready(function () {
 <h2>Education</h2>
 <p><strong>Reed College</strong><br />
 <em>Portland, Oregon</em> | <em>Expected Graduation May 2021</em><br />
-• B.A. in Mathematics with a Concentration in Statistics<br />
-• Relevant Coursework: Statistics Practicum, Statistical Learning, Case Studies in Data Science, Probability and Statistics, Computer Science, Vector Calculus, Linear Algebra</p>
+• B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology<br />
+• Relevant Coursework: Statistics Practicum, Machine Learning, Data Science, Introduction to Probability and Statistics, Computer Science Fundamentals, Vector Calculus, Linear Algebra</p>
 <p><br></p>
 </div>
 <div id="technical-experience" class="section level2">
 <h2>Technical Experience</h2>
+<p><strong>Data Science Intern</strong> | <em>John Deere</em><br />
+<em>Olathe, Kansas</em> | <em>May 2019 – Present</em><br />
+• Design, implement, and maintain a suite of tools to validate data integrity of 12 automated business reports with a collective internal viewership of over 10,000 using Python, R, PostgreSQL, and Spark SQL<br />
+• Construct 7 Tableau dashboards combining insights from 4 surveys conducted across time on similar topics, making use of reproducible R data tidying for future adaptability<br />
+• Model geospatial customer behavior using ArcGIS Pro and Python</p>
 <p><strong>Educational Technology Consultant</strong> | <em>Reed College Technology Services</em><br />
 <em>Portland, Oregon</em> | <em>December 2018 – Present</em><br />
 • Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals<br />
@@ -359,7 +364,9 @@ $(document).ready(function () {
 </div>
 <div id="publications" class="section level2">
 <h2>Publications</h2>
-<p><strong>Differentially Private Nonparametric Hypothesis Testing </strong>| <em>Computer and Communications Security</em><br />
+<p><strong>Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity</strong>| <em>arXiv</em><br />
+<em>In Review</em> | <em>2019</em><br />
+<strong>Differentially Private Nonparametric Hypothesis Testing</strong>| <em>Computer and Communications Security</em><br />
 <em>London, United Kingdom</em> | <em>2019</em><br />
 <strong>A Differentially Private Wilcoxon Signed-Rank Test</strong> | <em>arXiv</em><br />
 <em>Online</em> | <em>2018</em></p>
@@ -367,14 +374,14 @@ $(document).ready(function () {
 </div>
 <div id="skills" class="section level2">
 <h2>Skills</h2>
-<p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Basic)</em></p>
+<p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>ArcGIS</strong> <em>(Basic)</em></p>
 <p><br></p>
 </div>
 <div id="additional-experience" class="section level2">
 <h2>Additional Experience</h2>
 <p><strong>House Adviser</strong> | <em>Reed College Residence Life </em><br />
 <em>Portland, Oregon</em> | <em>August 2018 – Present</em><br />
-• Build inclusive and active community for twelve residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring<br />
+• Build inclusive and active community for 15 to 20 residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring<br />
 • Coordinate and document 4 thoughtful dorm floor events per semester<br />
 • Document room inventories, event outcomes, advising sessions, and other administrative tasks</p>
 <p><strong>Peer Career Adviser</strong> | <em>Reed College Center for Life Beyond Reed</em><br />
@@ -385,15 +392,15 @@ $(document).ready(function () {
 </div>
 <div id="honors-awards" class="section level2">
 <h2>Honors &amp; Awards</h2>
+<p><strong>Commendation for Excellence</strong> | <em>Reed College President’s Office</em><br />
+<em>Portland, Oregon</em> | <em>June 2018</em>, <em>June 2019</em><br />
+Awarded to the top 5 percent of each class, based on school year GPA, annually</p>
 <p><strong>1st Place—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
 <em>International</em> | <em>March 2019</em><br />
 A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test”</p>
 <p><strong>Honorable Mention—Undergraduate Statistics Class Project Competition</strong> | <em>American Statistical Association</em><br />
 <em>International</em> | <em>March 2019</em><br />
 A competition centered on recognizing exceptional research completed as a class project for an undergraduate statistics course, judged on accuracy of analysis, clarity of presentation, originality, and practical significance. “A Geospatial Study of Bikeshare Station Locations,” a project aiming to quantify progress in bikeshare equity using machine learning methods, was awarded an honorable mention</p>
-<p><strong>Commendation for Excellence</strong> | <em>Reed College President’s Office</em><br />
-<em>Portland, Oregon</em> | <em>May 2018</em><br />
-Awarded to the top 5 percent of each class, based on school year GPA, annually</p>
 <p><strong>All-State Academic Scholar</strong> | <em>Lawrence Journal-World</em><br />
 <em>De Soto, Kansas</em> | <em>June 2017</em><br />
 An honor “meant to recognize the most promising high school senior [in Kansas]… based on their strong academics, extracurricular involvement, and essays”</p>
@@ -409,6 +416,7 @@ An honor “meant to recognize the most promising high school senior [in Kansas]
 <em>Portland, Oregon</em> | <em>September 2018</em><br />
 <strong>gbfs: Easily Interface with General Bikeshare Feed Specification Files</strong> | <em>Case Studies in Data Science Colloquium</em><br />
 <em>Portland, Oregon</em> | <em>May 2018</em></p>
+<p><br></p>
 </div>
 
 
