--- a/cv.html
+++ b/cv.html
@@ -332,16 +332,11 @@ $(document).ready(function () {
 <p><strong>Reed College</strong><br />
 <em>Portland, Oregon</em> | <em>Expected Graduation May 2021</em><br />
 • B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology<br />
-• Relevant Coursework: Statistics Practicum, Machine Learning, Data Science, Introduction to Probability and Statistics, Computer Science Fundamentals, Vector Calculus, Linear Algebra</p>
+• Relevant Coursework: Probability, Mathematical Statistics, Statistics Practicum, Machine Learning, Data Science, Deep Learning, Vector Calculus, Linear Algebra, Gender &amp; Work, Science &amp; Social Difference</p>
 <p><br></p>
 </div>
 <div id="technical-experience" class="section level2">
 <h2>Technical Experience</h2>
-<p><strong>Data Science Intern</strong> | <em>John Deere</em><br />
-<em>Olathe, Kansas</em> | <em>May 2019 – Present</em><br />
-• Design, implement, and maintain a suite of tools to validate data integrity of 12 automated business reports with a collective internal viewership of over 10,000 using Python, R, PostgreSQL, and Spark SQL<br />
-• Construct 7 Tableau dashboards combining insights from 4 surveys conducted across time on similar topics, making use of reproducible R data tidying for future adaptability<br />
-• Model geospatial customer behavior using ArcGIS Pro and Python</p>
 <p><strong>Educational Technology Consultant</strong> | <em>Reed College Technology Services</em><br />
 <em>Portland, Oregon</em> | <em>December 2018 – Present</em><br />
 • Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals<br />
@@ -351,10 +346,17 @@ $(document).ready(function () {
 • Write, optimize, test, and maintain large bodies of R code<br />
 • Compose publication-quality manuscripts presenting findings thoughtfully and concisely<br />
 • Collaborate on R and LaTeX code using Git and GitHub version control</p>
+<p><strong>Lab Assistant</strong> | <em>Reed College Mathematics Department</em><br />
+<em>Portland, Oregon</em> | <em>September 2019 – Present</em><br />
+• Lead weekly lab sessions for two sets of 15 to 20 students in an introductory statistics course</p>
+<p><strong>Data Science Intern</strong> | <em>John Deere</em><br />
+<em>Olathe, Kansas</em> | <em>May 2019 – August 2019</em><br />
+• Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter<br />
+• Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS • Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing Deere’s roadmap to agricultural autonomy</p>
 <p><strong>R Developer</strong> | <em>Reed College Mathematics Department</em><br />
 <em>Portland, Oregon</em> | <em>December 2017 – Present</em><br />
 • Write, optimize, test, and maintain expressive, concise, and computationally efficient code to assist R users in real-world problem solving<br />
-• Publish two open-source software packages, “gbfs” and “anyflights,” in the Comprehensive R Archive Network</p>
+• Contribute testing coverage and bug fixes to “infer,” a CRAN-published R package allowing for tidyverse-friendly hypothesis testing • Co-author and publish two open-source software packages, “gbfs” and “anyflights,” in the Comprehensive R Archive Network</p>
 <p><strong>Analytics Intern</strong> | <em>Kartini Clinic for Children &amp; Families</em><br />
 <em>Portland, Oregon</em> | <em>January 2018</em><br />
 • Analyzed, interpreted, and modeled financial and pharmacogenetic data<br />
@@ -374,7 +376,7 @@ $(document).ready(function () {
 </div>
 <div id="skills" class="section level2">
 <h2>Skills</h2>
-<p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>ArcGIS</strong> <em>(Basic)</em></p>
+<p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>ArcGIS</strong> <em>(Intermediate)</em> | <strong>Tableau</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>CSS</strong> <em>(Basic)</em> | <strong>Jupyter</strong> <em>(Basic)</em></p>
 <p><br></p>
 </div>
 <div id="additional-experience" class="section level2">
@@ -383,7 +385,8 @@ $(document).ready(function () {
 <em>Portland, Oregon</em> | <em>August 2018 – Present</em><br />
 • Build inclusive and active community for 15 to 20 residents through intentional engagement, proactive conflict resolution, individual counseling, resource referrals, and mentoring<br />
 • Coordinate and document 4 thoughtful dorm floor events per semester<br />
-• Document room inventories, event outcomes, advising sessions, and other administrative tasks</p>
+• Document room inventories, event outcomes, advising sessions, and other administrative tasks<br />
+• Advise two to three new House Advisers per year following appointment as House Adviser Mentor by peers and professional staff</p>
 <p><strong>Peer Career Adviser</strong> | <em>Reed College Center for Life Beyond Reed</em><br />
 <em>Portland, Oregon</em> | <em>August 2018 – May 2019</em><br />
 • Advised students one-on-one on various professional development pursuits<br />
@@ -392,6 +395,9 @@ $(document).ready(function () {
 </div>
 <div id="honors-awards" class="section level2">
 <h2>Honors &amp; Awards</h2>
+<p><strong>2st Place (tied)—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
+<em>International</em> | <em>September 2019</em><br />
+A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity”</p>
 <p><strong>Commendation for Excellence</strong> | <em>Reed College President’s Office</em><br />
 <em>Portland, Oregon</em> | <em>June 2018</em>, <em>June 2019</em><br />
 Awarded to the top 5 percent of each class, based on school year GPA, annually</p>
