changing verb tenses, mostly😆

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><img src="images/simon.jpg" style="width:30%; border:3px solid; margin-right: 20px" align="left"></p>
-<p>I’m a statistics student heading into my third year at Reed College. I care about the use of data science for social good, and am especially interested in applications in sustainable agriculture. My current research focuses on privacy-preserving data analysis as well as applying statistical methods to quantify progress in equity of bikeshare programs. I also maintain some R software packages and work as a consultant to researchers at Reed to effectively utilize R and other data tools in their projects, and am currently working for John Deere as a Data Science Intern. Source code for many of my projects (including this website) is available on GitHub <span class="citation">@simonpcouch</span>!</p>
+<p>I’m a statistics student in my third year at Reed College. I care about the use of data science for social good, and am especially interested in applications in sustainable agriculture. My current research focuses on privacy-preserving data analysis as well as applying statistical methods to quantify progress in equity of bikeshare programs. I also maintain some R software packages and work as a consultant to researchers at Reed to effectively utilize R and other data tools in their projects, and recently wrapped up an internship with John Deere as a Data Science Intern. Source code for many of my projects (including this website) is available on GitHub <span class="citation">@simonpcouch</span>!</p>
 
 
 
