--- a/cv.html
+++ b/cv.html
@@ -344,7 +344,9 @@ $(document).ready(function () {
 • Lead weekly lab sessions for two sets of 15 to 20 students in an introductory statistics course</p>
 <p><strong>Analytics Intern</strong> | <em>John Deere</em><br />
 <em>Olathe, Kansas</em> | <em>May 2019 – August 2019</em><br />
-• Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter • Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS • Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing Deere’s roadmap to agricultural autonomy</p>
+• Automated data integrity checks on enterprise customer datasets using R, SQL, Python, and Jupyter<br />
+• Evaluated third-party data purchases for integrity and insight potential using Python and ArcGIS<br />
+• Constructed 9 Tableau dashboards combining insights from 4 surveys conducted across time, informing Deere’s roadmap to agricultural autonomy</p>
 <p><strong>Researcher</strong> | <em>Heather Kitada Smalley Ph.D.</em><br />
 <em>Portland, Oregon</em> | <em>November 2018 – September 2019</em><br />
 • Developed a novel querying approach to efficiently gather data from 73 bikeshare programs nationwide<br />
@@ -392,13 +394,13 @@ $(document).ready(function () {
 </div>
 <div id="honors-awards" class="section level2">
 <h2>Honors &amp; Awards</h2>
-<p><strong>2st Place (tied)—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
+<p><strong>2nd Place (tied)—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
 <em>International</em> | <em>September 2019</em><br />
 A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity”</p>
 <p><strong>Commendation for Excellence</strong> | <em>Reed College President’s Office</em><br />
 <em>Portland, Oregon</em> | <em>June 2018</em>, <em>June 2019</em><br />
 Awarded to the top 5 percent of each class, based on school year GPA, annually</p>
-<p><strong>1st Place—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
+<p><strong>1st Place (tied)—Undergraduate Statistics Research Project Competition</strong> | <em>American Statistical Association</em><br />
 <em>International</em> | <em>March 2019</em><br />
 A competition aiming to recognize research completed by undergraduates with exceptional significance, originality, and clarity of presentation, the first prize for which was awarded to “A Differentially Private Wilcoxon Signed-Rank Test”</p>
 <p><strong>Honorable Mention—Undergraduate Statistics Class Project Competition</strong> | <em>American Statistical Association</em><br />
