adjust spacing, spellcheck, add eUSR

--- a/cv.html
+++ b/cv.html
@@ -326,14 +326,14 @@ $(document).ready(function () {
 <p><strong>Reed College</strong><br />
 <em>Portland, Oregon</em> | <em>Expected Graduation May 2021</em><br />
 • B.A. in Mathematics with a Concentration in Statistics, Minor in Sociology<br />
-• Relevant Coursework: Probability, Statistics Practicum, Machine Learning, Data Science, Deep Learning, Vector Calculus, Linear Algebra, Gender &amp; Work, Science &amp; Social Difference</p>
+• Relevant Coursework: Probability, Statistics Practicum, Machine Learning, Data Science, Vector Calculus, Linear Algebra, Gender &amp; Work, Science &amp; Social Difference</p>
 <p><br></p>
 </div>
 <div id="technical-experience" class="section level2">
 <h2>Technical Experience</h2>
 <p><strong>Data Science Consultant</strong> | <em>Reed College Instructional Technology Services</em><br />
 <em>Portland, Oregon</em> | <em>December 2018 – Present</em><br />
-• Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals<br />
+• Collaborate with student and faculty researchers to efficiently and thoughtfully make use of data technologies to advance research goals across fields as varied as economics, linguistics, sociology, and biology<br />
 • Implement expressive and reproducible R and Python programs to address analytical challenges</p>
 <p><strong>R Developer</strong> | <em>Andrew Bray Ph.D.</em><br />
 <em>Portland, Oregon</em> | <em>December 2017 – Present</em><br />
@@ -353,8 +353,7 @@ $(document).ready(function () {
 • Modeled spatial access to bikeshare services to understand the role of community demographics</p>
 <p><strong>Researcher</strong> | <em>Differential Privacy Group</em><br />
 <em>Portland, Oregon</em> | <em>May 2018 – July 2019</em><br />
-• Write, optimize, test, and maintain large bodies of R code<br />
-• Compose publication-quality manuscripts presenting findings thoughtfully and concisely<br />
+• Write, optimize, test, and maintain large bodies of R code to carry out power analysis of differentially private hypothesis tests<br />
 • Collaborate on R and LaTeX code using Git and GitHub version control</p>
 <p><strong>Analytics Intern</strong> | <em>Kartini Clinic for Children &amp; Families</em><br />
 <em>Portland, Oregon</em> | <em>January 2018</em><br />
@@ -365,17 +364,17 @@ $(document).ready(function () {
 </div>
 <div id="publications" class="section level2">
 <h2>Publications</h2>
-<p><strong>Differentially Private Nonparametric Hypothesis Testing</strong> <em>(2019)</em><br />
+<p><a href="https://dl.acm.org/citation.cfm?id=3319535.3339821"><strong>Differentially Private Nonparametric Hypothesis Testing</strong> <em>(2019)</em></a><br />
        <em>ACM Conference on Computer and Communications Security</em> | <em>London, United Kingdom</em><br />
        <strong>Simon Couch</strong>, Zeki Kazan, Kaiyan Shi, Andrew Bray, Adam Groce<br />
-<strong>Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity</strong> <em>(2019)</em><br />
+<a href="https://arxiv.org/abs/1906.00129"><strong>Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity</strong> <em>(2019)</em></a><br />
        <em>arXiv Pre-print</em> | <em>In Review</em><br />
        <strong>Simon Couch</strong>, Heather Kitada Smalley</p>
 <p><br></p>
 </div>
 <div id="skills" class="section level2">
 <h2>Skills</h2>
-<p><strong>R</strong> <em>(Advanced)</em> | <strong>Python</strong> <em>(Intermediate)</em> | <strong>ArcGIS</strong> <em>(Intermediate)</em> | <strong>Tableau</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>CSS</strong> <em>(Basic)</em> | <strong>Jupyter</strong> <em>(Basic)</em></p>
+<p><strong>R</strong> <em>(Advanced)</em> | <strong>ArcGIS</strong> <em>(Intermediate)</em> | <strong>Tableau</strong> <em>(Intermediate)</em> | <strong>SQL</strong> <em>(Intermediate)</em> | <strong>Git &amp; GitHub</strong> <em>(Intermediate)</em> | <strong>LaTeX</strong> <em>(Intermediate)</em> | <strong>Python</strong> <em>(Basic)</em> | <strong>CSS</strong> <em>(Basic)</em> | <strong>Jupyter</strong> <em>(Basic)</em></p>
 <p><br></p>
 </div>
 <div id="additional-experience" class="section level2">
@@ -413,7 +412,9 @@ An honor “meant to recognize the most promising high school senior [in Kansas]
 </div>
 <div id="presentations" class="section level2">
 <h2>Presentations</h2>
-<p><strong>An Alternative to Rank-Based College Exploration</strong> | <em>Statistics Practicum Colloquium</em><br />
+<p><strong>Encouraging Equitable Bikeshare: Implications of Docked and Dockless Models for Spatial Equity</strong> | <em>Electronic Undergraduate Statistics Research Conference</em><br />
+<em>Online</em> | <em>November 2019</em><br />
+<strong>An Alternative to Rank-Based College Exploration</strong> | <em>Statistics Practicum Colloquium</em><br />
 <em>Portland, Oregon</em> | <em>May 2019</em><br />
 <strong>Private Hypothesis Testing Using Rank-Based Methods</strong> | <em>Theory and Practice of Differential Privacy</em><br />
 <em>Toronto, Canada</em> | <em>October 2018</em><br />
