goooodbye old website!

--- a/contact.html
+++ b/contact.html
@@ -321,9 +321,8 @@ $(document).ready(function () {
 
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
-<p>Feel free to reach out to me at: <a href="mailto:simonpatrickcouch@gmail.com" class="email">simonpatrickcouch@gmail.com</a> <br></p>
-<p>or connect with me on <a href="https://github.com/simonpcouch">GitHub</a>, <a href="https://twitter.com/simonpcouch">Twitter</a> or <a href="https://www.linkedin.com/in/simonpcouch/">LinkedIn</a> (links in top right, too)!</p>
-<p>I’m always glad to talk data science, statistics, and carrying more inclusive masculinities in these settings.</p>
+<p>Hi there!</p>
+<p>I’ve transitioned this website over to <a href="simonpcouch.com">simonpcouch.com</a>. Come on by. :)</p>
 
 
 
