correct link to new website

--- a/projects.html
+++ b/projects.html
@@ -323,7 +323,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><br></p>
 <p>Hi there!</p>
-<p>I’ve transitioned this website over to <a href="simonpcouch.com">simonpcouch.com</a>. Come on by. :)</p>
+<p>I’ve transitioned this website over to <a href="https://www.simonpcouch.com">simonpcouch.com</a>. Come on by. :)</p>
 
 
 
