--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p>Hi there!</p>
-<p>I’ve transitioned this website over to <a href="simonpcouch.com">simonpcouch.com</a>. Come on by. :)</p>
+<p>I’ve transitioned this website over to <a href="https://www.simonpcouch.com">simonpcouch.com</a>. Come on by. :)</p>
 
 
 
